# AdventureGame

./: .gitignore  pyproject.toml
.claude/skills/add-room/: SKILL.md
.claude/skills/playtest/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/validate-game/: SKILL.md
cli/: __init__.py  main.py  text_interface.py
engine/: __init__.py  game_engine.py
engine/actions/: __init__.py  action_handler.py  action_registry.py  action_resolver.py  builtin_actions.py  effects.py  preconditions.py
engine/loader/: __init__.py  game_loader.py  validator.py
engine/models/: __init__.py  command.py  enums.py  event.py  game_config.py  npc.py  object.py  room.py  verb.py
engine/parser/: __init__.py  fallback_parser.py  llm_parser.py  parser_interface.py  prompt_builder.py
engine/state/: __init__.py  game_state.py  state_manager.py
engine/world/: __init__.py  combat.py  darkness.py  npc_controller.py  scoring.py  world.py
games/zork1/: game.json
games/zork1/events/: house_events.json
games/zork1/npcs/: troll.json
games/zork1/objects/: above_ground.json  house.json
games/zork1/rooms/: above_ground.json  house.json  underground.json
games/zork1/verbs/: standard.json
models/: README.md
scripts/: download_model.py
tests/: conftest.py  test_actions.py  test_combat.py  test_darkness.py  test_engine.py  test_game_state.py  test_llm_integration.py  test_llm_parser.py  test_loader.py  test_models.py  test_parser.py  test_scoring.py  test_world.py
tests/fixtures/tiny_world/: game.json
tests/fixtures/tiny_world/events/: events.json
(+4 files in other folders)
